# praising_chatbot

./: .cursorrules  .gitignore  README.md  app.json  app.py  main.py  pyproject.toml  requirements.txt
backend/: config.py  database.py  json_storage.py  main.py  models.py  requirements.txt  wsgi.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx
frontend/src/utils/: axios.ts
src/: __init__.py
src/backend/: __init__.py
src/backend/api/: __init__.py  app.py  routes.py
src/backend/models/: __init__.py  chat.py
src/backend/services/: __init__.py  demo_service.py  openai_service.py  stats_service.py
src/config/: settings.py
src/frontend/: __init__.py
src/frontend/components/: __init__.py  chat_interface.py
