[project]
name = "praising-chatbot"
version = "1.0.0"
description = "A supportive and encouraging chat application built with Gradio"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gradio>=4.44.0",
    "openai>=1.61.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]
